--- a/Premier_site_web/CSS/style.css
+++ b/Premier_site_web/CSS/style.css
@@ -176,6 +176,9 @@ footer a{
 img{
     width: 340px;
     height: 340px;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* justify-content: center; */
     margin: 1%;
 }
 /* h2{
@@ -185,22 +188,30 @@ img{
     display: flex;
     margin: 1%;
 }
-.container2{
+.container_reverse{
     display: flex;
-    /* flex-direction:row-reverse; */
+    flex-direction:row-reverse;
     margin: 1%;
 }
-h2{
+.boutique h2{
     text-align: center;
+}
+.container img{
+    margin-left: 0;
+}
+.container_reverse img{
+    margin-right: 0;
 }
 .setlist{
     width: 60%;
     height: 35%;
     padding: 1%;
+    padding-left: 0;
+    
 }
 ol{
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     justify-content: center;
 
     /* gap: 30px; */
@@ -219,5 +230,5 @@ li{
 .setlist p{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: end;
-    margin-bottom: 0;
+    margin: 0;
 }
